--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ p {
 h2 {
   font-size: 50px;
   font-family: 'Molot', arial;
-  line-height: 0.77;
+  line-height: 1;
   margin-bottom: 56px;
   letter-spacing: 3px; }
 
@@ -102,7 +102,19 @@ header {
     z-index: -1;
     position: absolute;
     width: 100%;
-    pointer-events: none; }
+    pointer-events: none;
+
+  }
+  header .image.pages_head{
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    height: 80%;
+    position: unset;
+    pointer-events: unset;
+  }
+  header .image.pages_head .breadcrumbs img{
+    height: 16px;
+  }
     header .image img {
       height: 100%; }
   header .heading {
@@ -120,12 +132,15 @@ header {
     font-size: 55px;
     background: rgba(0, 0, 0, 0.8);
     text-align: center; }
+    header .pages_head .heading{
 
+    }
 @media (min-width: 1920px) {
   header {
     height: calc(18vw + 153px); }
     header .heading {
-      margin-top: 9vw; }
+      margin-top: 9vw;
+     }
     header .image img {
       height: 18vw; } }
 
@@ -163,14 +178,14 @@ header {
     header .heading p {
       font-size: 58px !important; }
   header span {
-    margin-left: 37px !important;
+    /* margin-left: 37px !important; */
     font-size: 22px !important; } }
 
 @media (max-width: 584px) {
   header .heading p {
     font-size: 48px !important; }
   header span {
-    margin-left: 30px !important;
+    /* margin-left: 30px !important; */
     font-size: 18px !important; } }
 
 @media (max-width: 518px) {
@@ -179,14 +194,14 @@ header {
     header .heading p {
       font-size: 32px !important; }
   header span {
-    margin-left: 20px !important;
+    /* margin-left: 20px !important; */
     font-size: 18px !important; } }
 
 @media (max-width: 425px) {
   header .heading p {
     font-size: 24px !important; }
   header span {
-    margin-left: 7px !important;
+    /* margin-left: 7px !important; */
     font-size: 12px !important; } }
 
 @media (max-width: 1024px) {
@@ -205,27 +220,32 @@ header {
     font-size: 38px !important; }
     .header-big .heading p {
       font-size: 58px !important; }
-  .header-big span {
+  /* .header-big span {
     margin-left: 37px !important;
-    font-size: 22px !important; } }
+    font-size: 22px !important; } */
+   }
 
 @media (max-width: 584px) {
   .header-big .heading {
     font-size: 30px !important; }
     .header-big .heading p {
       font-size: 48px !important; }
-  .header-big span {
+  /* .header-big span {
     margin-left: 30px !important;
-    font-size: 18px !important; } }
+    font-size: 18px !important; } */
+  
+  }
 
 @media (max-width: 518px) {
   .header-big .heading {
     font-size: 24px !important; }
     .header-big .heading p {
       font-size: 32px !important; }
-  .header-big span {
+  /* .header-big span {
     margin-left: 20px !important;
-    font-size: 18px !important; } }
+    font-size: 18px !important; } */
+  
+  }
 
 @media (max-width: 425px) {
   .header-big .heading {
@@ -233,25 +253,57 @@ header {
     font-size: 20px !important; }
     .header-big .heading p {
       font-size: 28px !important; }
-  .header-big span {
+  /* .header-big span {
     margin-left: 14px !important;
-    font-size: 14px !important; } }
+    font-size: 14px !important; } */
+  
+  }
 
 @media (max-width: 425px) {
   .header-big .heading {
     font-size: 18px !important; }
     .header-big .heading p {
       font-size: 24px !important; }
-  .header-big span {
+  /* .header-big span {
     margin-left: 7px !important;
-    font-size: 12px !important; } }
-
+    font-size: 12px !important; } */
+  
+  }
+.mobile_main_title{
+  display: none;
+}
 .top-bar {
   justify-content: space-between;
   width: 100%;
   height: 103px;
   box-shadow: 2px 2px 109px rgba(0, 0, 0, 0.17);
   background: #252525; }
+  .top-bar__wrappper{
+    width: 100%;
+    height: 103px;
+  }
+  .stickytop{
+    position: fixed;
+    /* z-index:  */
+    z-index: 1001;
+    box-shadow: none;
+  }
+  .top-bar-logo_mob{
+    width: 50px;
+    margin-left: 20px;
+    padding: 3px;
+    display: none;
+  }
+  .top-bar-logo_mob img{
+    width: 100%;
+    height: auto;
+  }
+  .stickytop .top-bar-logo{
+    display: none;
+  }
+  .stickytop .top-bar-logo_mob{
+    display: block;
+  }
   .top-bar .current-menu-item a::after {
     z-index: 0;
     content: '';
@@ -263,9 +315,11 @@ header {
     height: 50px; }
   .top-bar-logo {
     position: relative;
-    width: 244px;
-    height: 284px;
-    padding: 46px 0 0 49px; }
+    width: 214px;
+    min-height: 210px;
+    margin-right: 20px;
+    /* padding: 46px 0 0 49px;  */
+  }
     .top-bar-logo .logo-bg {
       z-index: 2;
       position: absolute;
@@ -275,7 +329,9 @@ header {
     .top-bar-logo-logo {
       z-index: 3;
       position: absolute;
-      pointer-events: none; }
+      /* pointer-events: none; */
+      width: 100%;
+      height: auto; }
   .top-bar-menu {
     flex-grow: 1;
     justify-content: space-between;
@@ -338,7 +394,18 @@ a:hover path {
   color: white;
   width: 100%;
   height: auto;
-  z-index: 10; }
+  z-index: 1000;
+  /* display: flex; */
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  font-size: 25px;
+  top: 15px; 
+}
+  .fullscreen-menu li{
+    font-family: 'Molot', arial;
+    min-width: 260px;
+  }
   .fullscreen-menu a {
     color: white;
     margin: 15px 0; }
@@ -349,9 +416,10 @@ a#burger {
   width: 40px;
   height: 40px;
   cursor: pointer;
-  margin-top: -8px; }
+  margin-top: -8px;
+  z-index: 1001; }
 
-a#burger span {
+/* a#burger span {
   position: absolute;
   top: 50%;
   margin-top: -1px;
@@ -389,7 +457,7 @@ a#burger.active span:before {
 
 a#burger.active span:after {
   transform: rotate(-45deg);
-  margin-left: -15px; }
+  margin-left: -15px; } */
 
 @media (max-width: 1430px) {
   .top-bar-logo {
@@ -401,7 +469,7 @@ a#burger.active span:after {
 @media (max-width: 1300px) {
   .top-bar-social {
     width: 300px; }
-  a#burger {
+    .hamburger {
     display: block; }
   .top-bar-menu {
     display: none; }
@@ -410,7 +478,8 @@ a#burger.active span:after {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
-    display: flex; } }
+    display: flex;
+    justify-content: end; } }
 
 @media (max-width: 1440px) {
   .header-big {
@@ -421,17 +490,21 @@ a#burger.active span:after {
     height: auto; } }
 
 .ssocial {
-  display: none; }
-
+  display: none;
+  margin-top: 20px; }
+  .ssocial .inline-svg-icon{
+    margin-right: 20px;
+}
 @media (max-width: 450px) {
-  .top-bar-logo {
-    padding: 24px 0 0 34px; }
+  /* .top-bar-logo {
+    padding: 24px 0 0 34px; } */
     .top-bar-logo .logo-bg {
       width: 172px;
       height: auto; }
-    .top-bar-logo .top-bar-logo-logo {
+    /* .top-bar-logo .top-bar-logo-logo {
       width: 80px;
-      height: auto; } }
+      height: auto; }  */
+    }
 
 @media (max-width: 425px) {
   .top-bar-social svg {
@@ -908,7 +981,10 @@ ol.numb {
       width: auto; }
     #img-carousel:after {
       height: 375px;
-      width: 600px; } }
+      width: 600px; }
+      header .image.pages_head{
+        background-position: center !important;
+      } }
 
 @media (max-width: 690px) {
   #img-carousel:after {
@@ -1082,6 +1158,7 @@ ol.numb {
   flex-wrap: wrap; }
 
 .content-form input, .content-form select {
+  -webkit-appearance: none;
   align-items: center;
   box-sizing: border-box;
   height: 57px;
@@ -1142,7 +1219,7 @@ ol.numb {
   justify-content: space-between; }
   .faith-index h3 {
     font-size: 24px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 38px;
     margin-bottom: 49px; }
 
@@ -1363,7 +1440,61 @@ span.red {
       font-size: 16px; }
   .index-contacts .read-more {
     margin-top: 0; } }
+@media (max-width: 575px){
+  #img-carousel .owl-item div{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;    
+    overflow: hidden;
+    height: 111vw;
+    width: 100vw;
+  }
+  .header-big .heading{
+    position: absolute;
+    bottom: 0;
+    top: 93.5vw;
+    left: 0;
+    height: fit-content;
+  }
+  #img-carousel .owl-item div img{
+    display: none;
+  }
+  .owl-nav{
+    display: none;
+  }
+  .wrapper .content{
+    padding: 53px 0 33px 67px;
+  }
+  .index-lib .item .cc{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .library .item .read-more{
+    flex: 0 0 100%;
+  }
+  .cc .read-more .wp-block-file a, .index-lib .item a{
+    margin-right: unset;
+  }
+  .index-lib .item .cc .read-more::before{
+    left: 33px;
+  }
 
+  #wp-calendar thead th::before{
+    display: none;
+  }
+  #wp-calendar{
+    border-spacing: unset;
+  }
+  .top-bar, .top-bar__wrappper{
+    height: 75px;
+  }
+  
+  #wp-calendar caption{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+}
 @media (max-width: 535px) {
   .library .item {
     border-width: 8px; }
@@ -1373,7 +1504,12 @@ span.red {
     box-sizing: border-box;
     padding: 15px 20px; }
   .content-form input {
-    font-size: 14px; } }
+    font-size: 14px; } 
+  .top-bar-logo{
+    width: 134px;
+    min-height: 157px;
+  }
+  }
 
 @media (max-width: 505px) {
   #wp-calendar thead th::before {
@@ -1450,7 +1586,9 @@ span.red {
 
 .menu-active {
   opacity: 0; }
-
+.menu-hide{
+  background: #252525 !important;
+}
 @media (max-width: 359px) {
   .index-lib .item {
     padding: 187px 20px 50px; } }
@@ -1622,6 +1760,7 @@ span.red {
   width: 28% !important;
 }
 .form input[type='submit']{
+  -webkit-appearance: none;
   width: 40%;
   background-color: #000;
   border: none;
@@ -1680,6 +1819,12 @@ span.red {
   .wrapper{
     width: 100%;
   }
+  /* .mobile_main_title{
+    display: block;
+  }
+  .desc_main_title{
+    display: none;
+  } */
   .content{
     padding-left: 10px !important;
     padding-right: 10px !important;
@@ -1702,13 +1847,7 @@ span.red {
   .header-big{
     position: relative;
   }
-  .header-big .heading{
-    position: absolute;
-    bottom: 0;
-    top: 50%;
-    left: 0;
-    height: fit-content;
-  }
+
   .photo_comamd{
     display: none;
   }
@@ -1719,9 +1858,9 @@ span.red {
     padding-left: 13px;
     /*margin-top: -38px;*/
   }
-  .cc .read-more{
+  /* .cc .read-more{
     text-align: left;
-  }
+  } */
   .cite-index{
     margin-top: 0;
   }
@@ -1731,10 +1870,11 @@ span.red {
   .cite-index .imgg .kv{
     left: 10px;
   }
-  .index-calendar{
+  /* .index-calendar{
     width: 90% !important;
     margin: auto;
-  }
+  } */
+
   .feed-back{
     padding: 13px;
   }
@@ -1807,14 +1947,28 @@ span.red {
     overflow: hidden;
     width:100%;
   }
-  .mobile-bottom-menu{
+  /* .mobile-bottom-menu{
     display: none;
-  }
+  } */
   .bottom-bar-copyright{
     margin-bottom: 15px;
   }
   #wp-calendar thead th{
     text-align: center;
+  }
+}
+@media screen and (max-width: 425px){
+  .header-big .heading{
+    top: 103vw;
+  }
+  .top-bar-social{
+    width: 73px;
+    background: #d02513;
+  }
+}
+@media screen and (max-width: 320px){
+  .header-big .heading{
+    top: 100.5vw;
   }
 }
 #wp-calendar td, #wp-calendar th{
@@ -1853,4 +2007,132 @@ span.red {
 
 .chronic-index .owl-item img{
   height: auto !important;
+}
+.fullscreen-menu-inner{
+  margin-top: 150px;
+}
+
+/* new burger */
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  z-index: 1001;
+  margin: 0 auto;
+  /* margin-top: 30px; */
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+
+.hamburger .bar {
+  padding: 0;
+  width: 30px;
+  height: 4px;
+  background-color: #fff;
+  display: block;
+  border-radius: 4px;
+  transition: all 0.4s ease-in-out;
+  position: absolute; 
+}
+
+.bar1 {
+  top: 0;
+}
+
+.bar2,
+.bar3 {
+  top: 13.5px;
+}
+
+.bar3 {
+  right: 0;
+}
+
+.bar4 {
+  bottom: 0;
+}
+
+.visuallyHidden {
+  position: absolute; 
+  overflow: hidden; 
+  clip: rect(0 0 0 0); 
+  height: 1px; width: 1px; 
+  margin: -1px; padding: 0; border: 0; 
+}
+
+.hamburger3 .bar1 {
+  transform-origin: 5%;
+}
+
+.hamburger3 .bar4 {
+  transform-origin: 5%;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar1{
+  transform: rotate(45deg);
+  height: 3px;
+  width: 42px;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar3{
+  transform: rotate(45deg);
+  height: 3px;
+  background-color: transparent;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar2{
+  transform: rotate(-45deg);
+  height: 3px;
+  background-color: transparent;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar4{
+  transform: rotate(-45deg);
+  height: 3px;
+  width: 42px;
+}
+
+.hamburger3 .bar1 {
+  transform-origin: 5%;
+}
+
+.hamburger3 .bar4 {
+  transform-origin: 5%;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar1{
+  transform: rotate(45deg);
+  height: 3px;
+  width: 42px;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar3{
+  transform: rotate(45deg);
+  height: 3px;
+  background-color: transparent;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar2{
+  transform: rotate(-45deg);
+  height: 3px;
+  background-color: transparent;
+}
+
+.checkbox3:checked + label > .hamburger3 > .bar4{
+  transform: rotate(-45deg);
+  height: 3px;
+  width: 42px;
+}
+@media screen and (max-width: 1300px){
+  .hamburger{
+    display: block;
+  }
 }
